# whiskers2

./: Cargo.toml
src/: cli.rs  filters.rs  frontmatter.rs  functions.rs  lib.rs  main.rs  matrix.rs  models.rs  templating.rs
tests/: cli.rs
tests/fixtures/: multifile.j2  singlefile-multiflavor.j2  singlefile-singleflavor.j2
tests/fixtures/multi/: multi.j2
tests/fixtures/single/: single.j2
